# local-voice-ai

./: .gitignore  README.md  pyproject.toml  readme-new.md
local_voice_ai/: __init__.py  cli.py  stt.py  tts.py
tests/: test_cli.py  test_stt.py  test_tts.py
