[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-voice-ai"
version = "0.1.0"
description = "Local voice AI for Apple Silicon — TTS + STT, no cloud, no API keys"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Mordechai Potash", email = "mordechai@potash.dev" },
]
keywords = ["tts", "stt", "mlx", "apple-silicon", "voice", "speech", "kokoro", "parakeet"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "mlx-audio>=0.2.0",
    "parakeet-mlx>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[project.scripts]
voice-ai = "local_voice_ai.cli:main"

[project.urls]
Homepage = "https://github.com/mordechaipotash/local-voice-ai"
Repository = "https://github.com/mordechaipotash/local-voice-ai"
Issues = "https://github.com/mordechaipotash/local-voice-ai/issues"
